--- a/templates/generic.html
+++ b/templates/generic.html
@@ -10,9 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../static/css/main.css" />
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/default.min.css">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+		
 	</head>
 	<body class="is-preload">
 
@@ -165,6 +163,10 @@
 			</div>
 
 		<!-- Scripts -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
+	<script>
+		hljs.highlightAll()
+	</script>
 			<script src="../static/js/jquery.min.js"></script>
 			<script src="../static/js/browser.min.js"></script>
 			<script src="../static/js/breakpoints.min.js"></script>
